--- a/.github/workflows/deploy-website.yaml
+++ b/.github/workflows/deploy-website.yaml
@@ -8,7 +8,7 @@ on:
 jobs:
   terraform:
     name: Deploy Infrastructure 
-    runs-on: ubuntu-lastest
+    runs-on: ubuntu-latest
 
     env: 
      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID}}
@@ -20,14 +20,14 @@ jobs:
 
     defaults:
       run:
-        workimg-directory: ./terraform
+        working-directory: ./terraform
 
     steps: 
       - name: Checkout Repo
         uses: actions/checkout@v2
 
       - name: Terraform Setup
-        uses: hashicrop/setup-terraform@v1
+        uses: hashicorp/setup-terraform@v1
 
       - name: Terraform Format
         uses: terraform Fmt 
