--- a/.github/workflows/deploy-website.yaml
+++ b/.github/workflows/deploy-website.yaml
@@ -2,27 +2,27 @@ name: Deploy Website
 
 on:
   push:
-    branch:
+    branches:
       - main
 
 jobs:
   terraform:
-    name: Deploy Infrastructure 
+    name: Deploy Infrastructure
     runs-on: ubuntu-latest
 
-    env: 
-     AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID}}
-     AWS_SECRET_ACCESS_KEY_ID: ${{ secrets.AWS_SECRET_ACCESS_KEY_ID}}
-     TF_VAR_region: ${{ secrets.TF_VAR_region}}
-     TF_VAR_iam_user_name: ${{ secrets.TF_VAR_iam_user_name}}
-     TF_VAR_bucket_name: ${{ secrets.TF_VAR_bucket_name}}
-     TF_VAR_table_name: ${{ secrets.TF_VAR_table_name}}
+    env:
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      TF_VAR_region: ${{ secrets.TF_VAR_region }}
+      TF_VAR_iam_user_name: ${{ secrets.TF_VAR_iam_user_name }}
+      TF_VAR_bucket_name: ${{ secrets.TF_VAR_bucket_name }}
+      TF_VAR_table_name: ${{ secrets.TF_VAR_table_name }}
 
     defaults:
       run:
         working-directory: ./terraform
 
-    steps: 
+    steps:
       - name: Checkout Repo
         uses: actions/checkout@v2
 
@@ -30,17 +30,16 @@ jobs:
         uses: hashicorp/setup-terraform@v1
 
       - name: Terraform Format
-        uses: terraform Fmt 
-      
+        run: terraform fmt
+
       - name: Terraform Init
-        uses: terraform init 
+        run: terraform init
 
       - name: Terraform Validate
-        uses: terraform validate
+        run: terraform validate
 
       - name: Terraform Plan
-        uses: terraform plan
+        run: terraform plan
 
-      - name: Terraform Apply 
-        uses: terraform apply auto-approve
-        
+      - name: Terraform Apply
+        run: terraform apply -auto-approve
