--- a/.github/workflows/deploy-website.yaml
+++ b/.github/workflows/deploy-website.yaml
@@ -12,7 +12,7 @@ jobs:
 
     env:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      AWS_SECRET_ACCESS_KEY_ID: ${{ secrets.AWS_SECRET_ACCESS_KEY_ID }}
       TF_VAR_region: ${{ secrets.TF_VAR_region }}
       TF_VAR_iam_user_name: ${{ secrets.TF_VAR_iam_user_name }}
       TF_VAR_bucket_name: ${{ secrets.TF_VAR_bucket_name }}
